# kc_os

./: .gitignore  Cargo.toml  Makefile  boot.asm  build.bat  build.sh  combine.ps1  link.ld  linker.ld  os.json  run.bat  run.sh  x86_64-kc_os.json
.cargo/: config.toml
boot/: boot.asm  loader.asm  run.sh
kernel/: Cargo.toml  x86_64_os.json
kernel/.cargo/: config.toml
kernel/src/: main.rs
src/: long_mode.asm  main.rs
